--- a/Chapter4.ipynb
+++ b/Chapter4.ipynb
@@ -12,20 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "id": "DWT32lOgHLrU"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4-2\n",
     "import torch\n",
@@ -139,8 +130,8 @@
    "source": [
     "WordPieceの語彙に含まれていない場合`[UNK]`となる\n",
     "\n",
-    "実際にモデルに入力する場合、トークンをIDに変換(符号化)する。<br>\n",
-    "`transformers.BertJapaneseTokenizer.encode()`で符号化する"
+    "実際にモデルに入力するには、トークンをIDに変換(符号化)する必要がある。<br>\n",
+    "`transformers.BertJapaneseTokenizer.encode()`で符号化する。"
    ]
   },
   {
@@ -165,15 +156,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "ID列をトークン列に変換するには`transformers.BertJapaneseTokenizer.convert_ids_to_tokens()`を使用する。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "QNAPAMjCjmH-"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[CLS]', '明日', 'は', '自然', '言語', '処理', 'の', '勉強', 'を', 'しよ', 'う', '。', '[SEP]']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4-8\n",
     "tokenizer.convert_ids_to_tokens(input_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "BERTに文章を入力する際は、各文章の長さを統一する必要がある。<br>\n",
+    "文章の長さを統一するには、特殊トークン`[PAD]`で埋める。"
    ]
   },
   {
