メモ等追加

--- a/Chapter4.ipynb
+++ b/Chapter4.ipynb
@@ -20,7 +20,7 @@
     "# 4-2\n",
     "\n",
     "import torch\n",
-    "from transformers import BertJapaneseTokenizer, BertModel"
+    "from transformers import BertJapaneseTokenizer"
    ]
   },
   {
@@ -1448,151 +1448,204 @@
    "metadata": {},
    "source": [
     "## BERTモデル\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "6ddHZWk6wLjh"
-   },
-   "outputs": [],
-   "source": [
-    "# 4-14\n",
-    "# モデルのロード\n",
-    "model_name = 'cl-tohoku/bert-base-japanese-whole-word-masking'\n",
-    "bert = BertModel.from_pretrained(model_name)\n",
     "\n",
-    "# BERTをGPUに載せる\n",
-    "bert = bert.cuda() "
+    "符号化されたデータをBERTに入力し、それぞれのトークンに対するベクトルを出力する。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at cl-tohoku/bert-base-japanese-whole-word-masking were not used when initializing BertModel: ['cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import BertModel\n",
+    "\n",
+    "model = BertModel.from_pretrained(model_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "モデルをGPUに載せる場合、以下のコードを追加する。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "jUG0FwjdERPP"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 4-15\n",
-    "print(bert.config)"
+    "# model = model.cuda()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "モデルの概要は`BertModel.config`インスタンス変数で出力する。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "C4Pcz2VCCChM"
-   },
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BertConfig {\n",
+       "  \"_name_or_path\": \"cl-tohoku/bert-base-japanese-whole-word-masking\",\n",
+       "  \"architectures\": [\n",
+       "    \"BertForMaskedLM\"\n",
+       "  ],\n",
+       "  \"attention_probs_dropout_prob\": 0.1,\n",
+       "  \"classifier_dropout\": null,\n",
+       "  \"hidden_act\": \"gelu\",\n",
+       "  \"hidden_dropout_prob\": 0.1,\n",
+       "  \"hidden_size\": 768,\n",
+       "  \"initializer_range\": 0.02,\n",
+       "  \"intermediate_size\": 3072,\n",
+       "  \"layer_norm_eps\": 1e-12,\n",
+       "  \"max_position_embeddings\": 512,\n",
+       "  \"model_type\": \"bert\",\n",
+       "  \"num_attention_heads\": 12,\n",
+       "  \"num_hidden_layers\": 12,\n",
+       "  \"pad_token_id\": 0,\n",
+       "  \"position_embedding_type\": \"absolute\",\n",
+       "  \"tokenizer_class\": \"BertJapaneseTokenizer\",\n",
+       "  \"transformers_version\": \"4.29.2\",\n",
+       "  \"type_vocab_size\": 2,\n",
+       "  \"use_cache\": true,\n",
+       "  \"vocab_size\": 32000\n",
+       "}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`num_hidden_layers`: 隠れ層の数<br>\n",
+    "`hidden_size`: 出力次元数<br>\n",
+    "`max_position_embeddings`: 最大入力トークン数\n",
+    "\n",
+    "BERTでは、符号化された文章を入力することで、BERT最終層の出力を得ることができる。<br>\n",
+    "まとめて処理する文章の数をバッチサイズと呼ぶ。<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 4-16\n",
-    "text_list = [\n",
-    "    '明日は自然言語処理の勉強をしよう。',\n",
-    "    '明日はマシーンラーニングの勉強をしよう。'\n",
+    "\n",
+    "text_lst = [\n",
+    "    \"明日は自然言語処理の勉強をしよう。\", \n",
+    "    \"明日はマシーンラーニングの勉強をしよう。\",\n",
     "]\n",
     "\n",
-    "# 文章の符号化\n",
+    "# 文章を符号化する\n",
     "encoding = tokenizer(\n",
-    "    text_list,\n",
-    "    max_length=32,\n",
-    "    padding='max_length',\n",
-    "    truncation=True,\n",
-    "    return_tensors='pt'\n",
+    "    text_lst, max_length=32, padding='max_length', truncation=True, return_tensors='pt'\n",
     ")\n",
     "\n",
-    "# データをGPUに載せる\n",
-    "encoding = { k: v.cuda() for k, v in encoding.items() } \n",
+    "# データをGPUに載せる場合\n",
+    "# encoding = {key: value.cuda() for key, value in encoding.items()}\n",
     "\n",
-    "# BERTでの処理\n",
-    "output = bert(**encoding) # それぞれの入力は2次元のtorch.Tensor\n",
+    "# BERTで処理する\n",
+    "output = model(**encoding) # 入力はdict, valueは2次元のtorch.Tensorを可変長引数**kwargsで渡す\n",
     "last_hidden_state = output.last_hidden_state # 最終層の出力"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "vwmt3sF3gU1L"
-   },
-   "outputs": [],
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 32, 768])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 4-17\n",
-    "output = bert(\n",
-    "    input_ids=encoding['input_ids'], \n",
-    "    attention_mask=encoding['attention_mask'],\n",
-    "    token_type_ids=encoding['token_type_ids']\n",
-    ")"
+    "last_hidden_state.size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`2`: バッチサイズ(まとめて処理する文章の数)<br>\n",
+    "`32`: 符号化した文章の長さ<br>\n",
+    "`768`: 出力層\n",
+    "\n",
+    "`i`番目の文章に含まれる`j`番目のトークンに対する出力は、`last_hidden_state[i][j]`となる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "また、BERTで推論のみを行う場合、`with`ブロックで`torch.no_grad()`を囲むようにする。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "6uDcHAPSFVlF"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 4-18\n",
-    "print(last_hidden_state.size()) #テンソルのサイズ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "-FPInM0KaPqh"
-   },
-   "outputs": [],
-   "source": [
-    "# 4-19\n",
     "with torch.no_grad():\n",
-    "    output = bert(**encoding)\n",
+    "    output = model(**encoding)\n",
     "    last_hidden_state = output.last_hidden_state"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "GPUメモリ上に変数を置いていたり、`numpy.ndarray`型に変換したりする場合、メインメモリに移す必要がある。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "rxAZqhrmTZOM"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 4-20\n",
-    "last_hidden_state = last_hidden_state.cpu() # CPUにうつす。\n",
-    "last_hidden_state = last_hidden_state.numpy() # numpy.ndarrayに変換\n",
-    "last_hidden_state = last_hidden_state.tolist() # リストに変換"
+    "last_hidden_state.cpu() # メインメモリに移す\n",
+    "last_hidden_state.numpy() # numpy.ndarrayに変換"
    ]
   }
  ],
