--- a/Chapter4.ipynb
+++ b/Chapter4.ipynb
@@ -53,7 +53,7 @@
     "BERTのトークナイザーは`MeCab`(形態素解析)→`WordPiece`(単語をトークン化)という流れで処理する。<br>\n",
     "特に指定しない限り、`MeCab`には`ipadic`が辞書として使用される。\n",
     "\n",
-    "`WordPiece`は約32000のトークンを持ち、トークンを用いて単語を分割している。<br>\n",
+    "`WordPiece`は32000のトークンを持ち、トークンを用いて単語を分割している。<br>\n",
     "`WordPiece`のトークンは`vocab`インスタンス変数で確認できる。"
    ]
   },
@@ -1605,7 +1605,7 @@
    "metadata": {},
    "source": [
     "`2`: バッチサイズ(まとめて処理する文章の数)<br>\n",
-    "`32`: 符号化した文章の長さ<br>\n",
+    "`32`: 系列長(符号化した文章の長さ)<br>\n",
     "`768`: 出力層\n",
     "\n",
     "`i`番目の文章に含まれる`j`番目のトークンに対する出力は、`last_hidden_state[i][j]`となる。"
