--- a/Chapter5.ipynb
+++ b/Chapter5.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e9b7fe3054343c795f8790f95127acd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)solve/main/vocab.txt:   0%|          | 0.00/258k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "550165adcd194461accee7fc1d4d1fba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)okenizer_config.json:   0%|          | 0.00/110 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f638949582014479851424ca3d9379f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)lve/main/config.json:   0%|          | 0.00/479 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "66325a74e13149468f50e13f615b961b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading pytorch_model.bin:   0%|          | 0.00/445M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -116,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +229,7 @@
        "torch.Size([1, 8, 32000])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,14 +259,14 @@
        "'今日は東京へ行く。'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 5-6\n",
-    "# [MASK]トークンの位置\n",
+    "# [MASK]トークン(トークンID:4)の位置\n",
     "mask_position = input_ids[0].tolist().index(4)\n",
     "\n",
     "# スコアが最もいいトークンのID(インデックス)を取り出す\n",
@@ -225,80 +281,374 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "TgbIA-1-EVaJ"
-   },
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "391"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id_best"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "モデルが推論したスコア上位のトークンを抜き出してみる。<br>\n",
+    "関数を作成する。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 5-7\n",
-    "def predict_mask_topk(text, tokenizer, bert_mlm, num_topk):\n",
-    "    \"\"\"\n",
-    "    文章中の最初の[MASK]をスコアの上位のトークンに置き換える。\n",
-    "    上位何位まで使うかは、num_topkで指定。\n",
-    "    出力は穴埋めされた文章のリストと、置き換えられたトークンのスコアのリスト。\n",
-    "    \"\"\"\n",
-    "    # 文章を符号化し、BERTで分類スコアを得る。\n",
+    "\n",
+    "def predict_mask_topk(\n",
+    "    text: str,\n",
+    "    tokeniser: BertJapaneseTokenizer, \n",
+    "    model: BertForMaskedLM,\n",
+    "    num_topk: int\n",
+    ") -> (list, torch.Tensor):\n",
     "    input_ids = tokenizer.encode(text, return_tensors='pt')\n",
-    "    input_ids = input_ids.cuda()\n",
+    "    # input_ids = input_ids.cuda()\n",
     "    with torch.no_grad():\n",
-    "        output = bert_mlm(input_ids=input_ids)\n",
-    "    scores = output.logits\n",
+    "        output = model(input_ids=input_ids)\n",
+    "        scores = output.logits\n",
     "\n",
-    "    # スコアが上位のトークンとスコアを求める。\n",
-    "    mask_position = input_ids[0].tolist().index(4) \n",
-    "    topk = scores[0, mask_position].topk(num_topk)\n",
-    "    ids_topk = topk.indices # トークンのID\n",
-    "    tokens_topk = tokenizer.convert_ids_to_tokens(ids_topk) # トークン\n",
-    "    scores_topk = topk.values.cpu().numpy() # スコア\n",
+    "    mask_position = input_ids[0].tolist().index(4)\n",
+    "    # torch.Tensor.topk(k)でtorch.Tensorの各要素のうち引数に指定した最大数k個だけ抜き出す\n",
+    "    scores_topk = scores[0][mask_position].topk(num_topk)\n",
+    "    \n",
+    "    values_topk = scores_topk.values.numpy() # GPUメモリに渡している場合、scores_topk.values.cpu().numpy()\n",
+    "    ids_topk = scores_topk.indices\n",
+    "    tokens_topk = tokenizer.convert_ids_to_tokens(ids_topk)\n",
+    "    text_topk = [text.replace('[MASK]', token, 1) for token in tokens_topk] # 最初のトークンのみ変換する\n",
     "\n",
-    "    # 文章中の[MASK]を上で求めたトークンで置き換える。\n",
-    "    text_topk = [] # 穴埋めされたテキストを追加する。\n",
-    "    for token in tokens_topk:\n",
-    "        token = token.replace('##', '')\n",
-    "        text_topk.append(text.replace('[MASK]', token, 1))\n",
-    "\n",
-    "    return text_topk, scores_topk\n",
-    "\n",
-    "text = '今日は[MASK]へ行く。'\n",
-    "text_topk, _ = predict_mask_topk(text, tokenizer, bert_mlm, 10)\n",
-    "print(*text_topk, sep='\\n')"
+    "    return (text_topk, values_topk)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "yCaGV_rT3A5N"
-   },
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "今日は東京へ行く。\n",
+      "今日はハワイへ行く。\n",
+      "今日は学校へ行く。\n",
+      "今日はニューヨークへ行く。\n",
+      "今日はどこへ行く。\n",
+      "今日は空港へ行く。\n",
+      "今日はアメリカへ行く。\n",
+      "今日は病院へ行く。\n",
+      "今日はそこへ行く。\n",
+      "今日はロンドンへ行く。\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_topk, _ = predict_mask_topk(text, tokenizer, model, 10)\n",
+    "print(*text_topk, sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "自然な文章が出力されているのがわかる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.3 貪欲法を用いた複数`[MASK]`の穴埋め"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "次に、複数`[MASK]`がある場合を考える。\n",
+    "```\n",
+    "今日は[MASK][MASK]へ行く。\n",
+    "```\n",
+    "という文章の場合、`[MASK]`の組み合わせは$32000^2$通りとなるため、貪欲法という手法を用いて計算量を近似的に減らす。<br>\n",
+    "貪欲法は、\n",
+    "\n",
+    "1. 一番最初にある`[MASK]`を最も高いスコアのトークンで穴埋めする。\n",
+    "2. 穴埋め後の文章に対して次の`[MASK]`を穴埋めする。\n",
+    "\n",
+    "という処理を繰り返す。これにより、計算量$O$を$O=32000^2$から$O=32000\\cdot2$まで減らすことができた。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 5-8\n",
-    "def greedy_prediction(text, tokenizer, bert_mlm):\n",
-    "    \"\"\"\n",
-    "    [MASK]を含む文章を入力として、貪欲法で穴埋めを行った文章を出力する。\n",
-    "    \"\"\"\n",
-    "    # 前から順に[MASK]を一つづつ、スコアの最も高いトークンに置き換える。\n",
-    "    for _ in range(text.count('[MASK]')):\n",
-    "        text = predict_mask_topk(text, tokenizer, bert_mlm, 1)[0][0]\n",
-    "    return text\n",
     "\n",
-    "text = '今日は[MASK][MASK]へ行く。'\n",
-    "greedy_prediction(text, tokenizer, bert_mlm)"
+    "def greedy_prediction(\n",
+    "    text: str,\n",
+    "    tokenizer: BertJapaneseTokenizer,\n",
+    "    model: BertForMaskedLM\n",
+    ") -> str:\n",
+    "    for _ in range(text.count(\"[MASK]\")):\n",
+    "        text, _ = predict_mask_topk(text, tokenizer, model, 1)\n",
+    "        text = text[0]\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'今日は、東京へ行く。'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"今日は[MASK][MASK]へ行く。\"\n",
+    "greedy_prediction(text, tokenizer, model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "自然な文章が出力されているのがわかる。\n",
+    "\n",
+    "一方で、BERTはコレまでの$N$グラム法のような、文章を前から順に出力するといったタスクは苦手である。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'今日は社会社会的な地位'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5-9\n",
+    "\n",
+    "text = \"今日は[MASK][MASK][MASK][MASK][MASK]\"\n",
+    "greedy_prediction(text, tokenizer, model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "これは、BERTが事前学習において、文章のうちごく少数のトークンをマスクし、まわりの文脈から元のトークンを置き換えていることによる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.4 ビームサーチによる画像の穴埋め"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "貪欲法では最初の`[MASK]`から順番に1トークンずつ最も高いスコアで置き換えるが、これは全トークンの合計スコアが最も高いことを保証しない。そこで、よりよい近似手法として「ビームサーチ」を用いる。<br>\n",
+    "ビームサーチは、まず1つ目の`[MASK]`について上位10のトークンを穴埋めした文章を出力する。次に、生成された10の文章に対し、2つ目の`[MASK]`について上位10のトークンを穴埋めした文章を出力する。これにより生成された100の文章に対し、スコアの合計値が高い10の文章を選択する。その後は選択された10の文章に対し、同様に穴埋めを行う。\n",
+    "\n",
+    "ビームサーチは、以下のように実装する。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"今日は[MASK][MASK]へ行く。\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_mask = text.count(\"[MASK]\")\n",
+    "text = [text]\n",
+    "scores_topk = np.array([0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['今日は[MASK][MASK]へ行く。']"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_topk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_lst, scores = predict_mask_topk(text[0], tokenizer, model, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['今日は、[MASK]へ行く。',\n",
+       " '今日は再び[MASK]へ行く。',\n",
+       " '今日はその[MASK]へ行く。',\n",
+       " '今日はあの[MASK]へ行く。',\n",
+       " '今日は同じ[MASK]へ行く。',\n",
+       " '今日はお[MASK]へ行く。',\n",
+       " '今日はこの[MASK]へ行く。',\n",
+       " '今日は新しい[MASK]へ行く。',\n",
+       " '今日はゲーム[MASK]へ行く。',\n",
+       " '今日は東京[MASK]へ行く。']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_lst"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "prdEvsxBrrGq"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# 5-9\n",
-    "text = '今日は[MASK][MASK][MASK][MASK][MASK]'\n",
-    "greedy_prediction(text, tokenizer, bert_mlm)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
