メモ追加 #5-11まで

--- a/Chapter5.ipynb
+++ b/Chapter5.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,65 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e9b7fe3054343c795f8790f95127acd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)solve/main/vocab.txt:   0%|          | 0.00/258k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "550165adcd194461accee7fc1d4d1fba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)okenizer_config.json:   0%|          | 0.00/110 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f638949582014479851424ca3d9379f7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading (…)lve/main/config.json:   0%|          | 0.00/479 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66325a74e13149468f50e13f615b961b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading pytorch_model.bin:   0%|          | 0.00/445M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -150,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +173,7 @@
        "torch.Size([1, 8, 32000])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +203,7 @@
        "'今日は東京へ行く。'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +234,7 @@
        "391"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +265,7 @@
     "    text: str,\n",
     "    tokeniser: BertJapaneseTokenizer, \n",
     "    model: BertForMaskedLM,\n",
-    "    num_topk: int\n",
+    "    num_topk: int = 1\n",
     ") -> (list, torch.Tensor):\n",
     "    input_ids = tokenizer.encode(text, return_tensors='pt')\n",
     "    # input_ids = input_ids.cuda()\n",
@@ -343,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +373,7 @@
        "'今日は、東京へ行く。'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +403,7 @@
        "'今日は社会社会的な地位'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,217 +436,109 @@
    },
    "source": [
     "貪欲法では最初の`[MASK]`から順番に1トークンずつ最も高いスコアで置き換えるが、これは全トークンの合計スコアが最も高いことを保証しない。そこで、よりよい近似手法として「ビームサーチ」を用いる。<br>\n",
-    "ビームサーチは、まず1つ目の`[MASK]`について上位10のトークンを穴埋めした文章を出力する。次に、生成された10の文章に対し、2つ目の`[MASK]`について上位10のトークンを穴埋めした文章を出力する。これにより生成された100の文章に対し、スコアの合計値が高い10の文章を選択する。その後は選択された10の文章に対し、同様に穴埋めを行う。\n",
+    "ビームサーチは、まず1つ目の`[MASK]`について上位$N$のトークンを穴埋めした文章を出力する。次に、生成された$N$の文章に対し、2つ目の`[MASK]`について上位$N$のトークンを穴埋めした文章を出力する。これにより生成された$N^2$の文章に対し、スコアの合計値が高い$N$の文章を選択する。その後は選択された$N$の文章に対し、同様に穴埋めを行う。\n",
     "\n",
     "ビームサーチは、以下のように実装する。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = \"今日は[MASK][MASK]へ行く。\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_mask = text.count(\"[MASK]\")\n",
-    "text = [text]\n",
-    "scores_topk = np.array([0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['今日は[MASK][MASK]へ行く。']"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0])"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scores_topk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_lst, scores = predict_mask_topk(text[0], tokenizer, model, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['今日は、[MASK]へ行く。',\n",
-       " '今日は再び[MASK]へ行く。',\n",
-       " '今日はその[MASK]へ行く。',\n",
-       " '今日はあの[MASK]へ行く。',\n",
-       " '今日は同じ[MASK]へ行く。',\n",
-       " '今日はお[MASK]へ行く。',\n",
-       " '今日はこの[MASK]へ行く。',\n",
-       " '今日は新しい[MASK]へ行く。',\n",
-       " '今日はゲーム[MASK]へ行く。',\n",
-       " '今日は東京[MASK]へ行く。']"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_lst"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "yHRemOdN0QE9"
-   },
    "outputs": [],
    "source": [
     "# 5-10\n",
-    "def beam_search(text, tokenizer, bert_mlm, num_topk):\n",
-    "    \"\"\"\n",
-    "    ビームサーチで文章の穴埋めを行う。\n",
-    "    \"\"\"\n",
-    "    num_mask = text.count('[MASK]')\n",
+    "\n",
+    "def beam_search(\n",
+    "    text: str, \n",
+    "    tokenizer: BertJapaneseTokenizer, \n",
+    "    model: BertForMaskedLM,\n",
+    "    num_topk: int = 10\n",
+    ") -> list:\n",
+    "    num_mask = text.count(\"[MASK]\")\n",
     "    text_topk = [text]\n",
     "    scores_topk = np.array([0])\n",
+    "    \n",
     "    for _ in range(num_mask):\n",
-    "        # 現在得られている、それぞれの文章に対して、\n",
-    "        # 最初の[MASK]をスコアが上位のトークンで穴埋めする。\n",
-    "        text_candidates = [] # それぞれの文章を穴埋めした結果を追加する。\n",
-    "        score_candidates = [] # 穴埋めに使ったトークンのスコアを追加する。\n",
-    "        for text_mask, score in zip(text_topk, scores_topk):\n",
-    "            text_topk_inner, scores_topk_inner = predict_mask_topk(\n",
-    "                text_mask, tokenizer, bert_mlm, num_topk\n",
+    "        results = []\n",
+    "        for text, score in zip(text_topk, scores_topk):\n",
+    "            text_topk_tmp, scores_topk_tmp = predict_mask_topk(\n",
+    "                text, tokenizer, model, num_topk\n",
     "            )\n",
-    "            text_candidates.extend(text_topk_inner)\n",
-    "            score_candidates.append( score + scores_topk_inner )\n",
-    "\n",
-    "        # 穴埋めにより生成された文章の中から合計スコアの高いものを選ぶ。\n",
-    "        score_candidates = np.hstack(score_candidates)\n",
-    "        idx_list = score_candidates.argsort()[::-1][:num_topk]\n",
-    "        text_topk = [ text_candidates[idx] for idx in idx_list ]\n",
-    "        scores_topk = score_candidates[idx_list]\n",
-    "\n",
-    "    return text_topk\n",
-    "\n",
-    "text = \"今日は[MASK][MASK]へ行く。\"\n",
-    "text_topk = beam_search(text, tokenizer, bert_mlm, 10)\n",
-    "print(*text_topk, sep='\\n')"
+    "            tmp = np.vstack([text_topk_tmp, scores_topk_tmp + score], dtype='object').T\n",
+    "            results.append(tmp)\n",
+    "        results = np.vstack(results)\n",
+    "        results = results[np.argsort(results[:, -1])[::-1]][:10, :]\n",
+    "        text_topk = results[:10, :][:, 0].tolist()\n",
+    "        scores_topk = results[:10, :][:, 1]\n",
+    "    return text_topk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "5mhL-VSTvUo7"
-   },
-   "outputs": [],
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "今日はお台場へ行く。\n",
+      "今日はお祭りへ行く。\n",
+      "今日はゲーム##センターへ行く。\n",
+      "今日はお風呂へ行く。\n",
+      "今日はゲームショップへ行く。\n",
+      "今日は東京ディズニーランドへ行く。\n",
+      "今日はお店へ行く。\n",
+      "今日は同じ場所へ行く。\n",
+      "今日はあの場所へ行く。\n",
+      "今日は同じ学校へ行く。\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"今日は[MASK][MASK]へ行く。\"\n",
+    "text_topk = beam_search(text, tokenizer, model, 10)\n",
+    "print(*text_topk, sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "貪欲法と同様に自然な文章が出力されていることがわかる。\n",
+    "\n",
+    "一方で、文章中に`[MASK]`トークンが多い場合、自然な文章の生成は難しい。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "今日は社会社会学会所属。\n",
+      "今日は社会社会学会会長。\n",
+      "今日は社会社会に属する。\n",
+      "今日は時代社会に属する。\n",
+      "今日は社会社会学会理事。\n",
+      "今日は時代社会にあたる。\n",
+      "今日は社会社会にある。\n",
+      "今日は社会社会学会会員。\n",
+      "今日は時代社会にある。\n",
+      "今日は社会社会になる。\n"
+     ]
+    }
+   ],
    "source": [
     "# 5-11\n",
-    "text = '今日は[MASK][MASK][MASK][MASK][MASK]'\n",
-    "text_topk = beam_search(text, tokenizer, bert_mlm, 10)\n",
-    "print(*text_topk, sep='\\n')"
+    "\n",
+    "text = \"今日は[MASK][MASK][MASK][MASK][MASK]\"\n",
+    "text_topk = beam_search(text, tokenizer, model, 10)\n",
+    "print(*text_topk, sep=\"\\n\")"
    ]
   }
  ],
