--- a/Chapter5.ipynb
+++ b/Chapter5.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at cl-tohoku/bert-base-japanese-whole-word-masking were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "Some weights of the model checkpoint at cl-tohoku/bert-base-japanese-whole-word-masking were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "torch.Size([1, 8, 32000])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "'今日は東京へ行く。'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,13 +219,16 @@
     "# トークンIDをトークンに置き換える\n",
     "token_best = tokenizer.convert_ids_to_tokens(id_best)\n",
     "\n",
+    "# サブワードの頭につく\"##\"を削除する\n",
+    "token_best = token_best.replace(\"##\", \"\")\n",
+    "\n",
     "# [MASK]をトークンに置き換える\n",
     "text.replace(\"[MASK]\", token_best)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +237,7 @@
        "391"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,14 +283,14 @@
     "    values_topk = scores_topk.values.numpy() # GPUメモリに渡している場合、scores_topk.values.cpu().numpy()\n",
     "    ids_topk = scores_topk.indices\n",
     "    tokens_topk = tokenizer.convert_ids_to_tokens(ids_topk)\n",
-    "    text_topk = [text.replace('[MASK]', token, 1) for token in tokens_topk] # 最初のトークンのみ変換する\n",
+    "    text_topk = [text.replace('[MASK]', token.replace(\"##\", \"\"), 1) for token in tokens_topk] # 最初のトークンのみ変換する\n",
     "\n",
     "    return (text_topk, values_topk)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +376,7 @@
        "'今日は、東京へ行く。'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +406,7 @@
        "'今日は社会社会的な地位'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +488,7 @@
      "text": [
       "今日はお台場へ行く。\n",
       "今日はお祭りへ行く。\n",
-      "今日はゲーム##センターへ行く。\n",
+      "今日はゲームセンターへ行く。\n",
       "今日はお風呂へ行く。\n",
       "今日はゲームショップへ行く。\n",
       "今日は東京ディズニーランドへ行く。\n",
@@ -513,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
