メモ追加#6-9まで

--- a/Chapter6.ipynb
+++ b/Chapter6.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.1 文章分類を試してみる"
+    "## 6.3 BERTによる文章分類"
    ]
   },
   {
@@ -222,7 +222,7 @@
     "id": "u1TgAkdqTogm"
    },
    "source": [
-    "## 6.4 ファインチューニングと文章分類"
+    "## 6.4 livedoorニュースコーパスについて"
    ]
   },
   {
@@ -251,6 +251,13 @@
     "|エスマックス|smax|870|6|\n",
     "|Sports Watch|sports-watch|900|7|\n",
     "|トピックニュース|topic-news|770|8|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "事前準備"
    ]
   },
   {
@@ -291,9 +298,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl --output data/chapter6/ldcc-20140209.tar.gz https://www.rondhuit.com/download/ldcc-20140209.tar.gz\n",
+    "!curl --output \"data/chapter6/ldcc-20140209.tar.gz\" \"https://www.rondhuit.com/download/ldcc-20140209.tar.gz\"\n",
     "!cd data/chapter6 && tar -zxvf ldcc-20140209.tar.gz"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "中身を見てみる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://news.livedoor.com/article/detail/6342280/\n",
+      "2012-03-06T13:00:00+0900\n",
+      "USB3.0対応で爆速データ転送！　9倍速のリーダー／ライター登場\n",
+      "USB3.0が登場してから今年で4年目となるがパソコン側でのUSB3.0ポート搭載が進んで来ても対応機器がなかなか充実していない現状がある。そんな中で新しく高速な読み取りが可能なメモリーカードリーダー／ライターが登場した。\n",
+      "\n",
+      "バッファローコクヨサプライがUSB3.0対応のカードリーダー／ライターを発表した。SDHC対応のSD系メディアやコンパクトフラッシュ、メモリースティック系メディア、xDピクチャーカードといったデジカメやスマホ、携帯ゲームといった機器で使われている各種メディアを従来よりも短時間でPCに取り込むことが可能になる。\n",
+      "\n",
+      "転送速度が5Gbps（理論値）とUSB2.0の480Mbpsと比べて爆速になったUSB3.0はPC側の対応が進んで来ていたが高速転送が生かせる周辺機器としては、外付けHDDや一部のUSBメモリーくらいしかなかった。これに多くのメディアが扱えるリーダー／ライターが加わることで手軽にUSB3.0の恩恵を受けることができるようになる。\n",
+      "\n",
+      "今回発表されたのは、USB3.0ケーブルとカードリーダー本体が分かれるタイプの「BSCR09U3」シリーズ（3,240円）、USB3.0コネクタをカードリーダー本体に内蔵している「BSCRD04U3」シリーズ（2,690円）だ。共にホワイトとブラックのカラーバリエーションが用意される（発売は3月下旬以降）。\n",
+      "\n",
+      "■リリースページ\n",
+      "■バッファローコクヨサプライ\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "■バッファローの記事をもっと見る\n",
+      "・約283gでカバンに入る！小型キーボードの驚くべき機能\n",
+      "・3種類のホットキーで使いやすい！AndroidとPCで使えるキーボードの魅力\n",
+      "・ドラえもんもビックリの新アイテム！マウスとキーボードが合体\"OPAir\"\n",
+      "・ありそうでなかった便利機能！ファイル仕分けする画期的なHDD\n",
+      "\n",
+      "\n",
+      "サンディスク SanDisk microSDHC 32GB（microSD 32GB） 超高速クラス4  変換アダプター付 世界国内シェアNo.1 バルク品\n",
+      "クチコミを見る\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat data/chapter6/text/it-life-hack/it-life-hack-6342280.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "各ファイルは、1行目にURL、2行目に公開日時、3行目にタイトル、4行目以降に記事本文が来る。<br>\n",
+    "これらのテキストファイルの本文を読み込み、`label`に分類する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.5 BERTのファインチューニングと性能評価"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ファインチューニングには、データセットの前処理を行いBERTが読み込むことができる形式に変換する必要がある。Pytorchでは`DataLoader`で実装できる。<br>\n",
+    "ファインチューニングでは、バッチサイズ分のデータとラベルをデータセットから抜き出し、抜き出したデータセットに対する処理結果からパラメータを更新するミニバッチ学習を行う。`DataLoader`は、データセットからミニバッチを取り出すためのものである。\n",
+    "\n",
+    "まずは`DataLoader`がどのような振る舞いをするのか確認してみる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6-9\n",
+    "\n",
+    "# DataLoaderの作成\n",
+    "dataset_for_loader = [\n",
+    "    {'data':torch.tensor([0,1]), 'labels':torch.tensor(0)},\n",
+    "    {'data':torch.tensor([2,3]), 'labels':torch.tensor(1)},\n",
+    "    {'data':torch.tensor([4,5]), 'labels':torch.tensor(2)},\n",
+    "    {'data':torch.tensor([6,7]), 'labels':torch.tensor(3)},\n",
+    "]\n",
+    "loader = DataLoader(data, batch_size=2) # 引数shuffle=Trueを渡すことでランダムなデータセットを構築する事が可能"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "batch 0: {'data': tensor([[0, 1],\n",
+      "        [2, 3]]), 'labels': tensor([0, 1])}\n",
+      "batch 1: {'data': tensor([[4, 5],\n",
+      "        [6, 7]]), 'labels': tensor([2, 3])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ミニバッチを取り出す\n",
+    "for idx, batch in enumerate(loader):\n",
+    "    print(f\"batch {idx}: {batch}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`dataset_for_loader`は整形されたデータセットのリストであり、各要素は単一のデータを表す。各要素は`key`に`data`と`labels`を持つ辞書型であるとする。<br>\n",
+    "`DataLoader`は`for`ループを回すことでミニバッチを取り出すことができる。一般的には、各データのキーに対する値がサイズ$(n_1, n_2, \\ldots, n_l)$の`torch.Tensor`のとき、バッチサズ$m$のデータローダからは$(m, n_1, n_2, \\ldots, n_l)$の`torch.Tensor`が得られる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
